# Examen

./: .gitignore  Examen.cabal
Python/: default_filename.blg  default_filename.tex  main.py  test.py
src/: Main.hs  RandomList.hs  Test.hs
