name: Examen
version: 0.1.0.0
cabal-version: >=1.8
build-type: Simple
license: GPL-3
license-file: LICENSE
maintainer: halanay@fmi.unibuc.ro
category: Math
author: Andrei Halanay
data-dir: ""

executable Examen
    build-depends: base,hmatrix -any, MonadRandom,random, random-shuffle
    main-is: Main.hs
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: src
    other-modules: RandomList
    ghc-options: -W

